updated code for latest bokeh

--- a/How to.ipynb
+++ b/How to.ipynb
@@ -6,23 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First Initialize Images Here\n",
-    "import h5py\n",
-    "img_path = ['img_0.h5','img_1.h5','img_2.h5','img_3.h5']\n",
-    "imgs = []\n",
-    "for cnt1 in range(len(img_path)):\n",
-    "    \n",
-    "    with h5py.File(img_path[cnt1],'r') as h5:\n",
-    "        print(img_path[cnt1])\n",
-    "        img = h5['data'][...]\n",
-    "        print(img.shape)\n",
-    "    imgs.append(img)\n"
+    "import nibabel as nib\n",
+    "\n",
+    "nii = nib.load('imgs/MNI152_T1_1mm.nii.gz')\n",
+    "img_full = nii.get_fdata()\n",
+    "\n",
+    "nii = nib.load('imgs/MNI152_T1_1mm_Brain.nii.gz')\n",
+    "img_brain = nii.get_fdata()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Import the 3D viewer\n",
@@ -31,7 +29,7 @@
     "\n",
     "# Display Single 3D image, axis controls the view (Axial, Coronal, Saggital),\n",
     "# plot_size controls the actually display size.\n",
-    "viewer.imshow3d(imgs[0], axis=1, plot_size=0.8)\n"
+    "viewer.imshow3d(img_full, axis=2, plot_size=0.8, img_res=(1, 1, 1))\n"
    ]
   },
   {
@@ -41,7 +39,19 @@
    "outputs": [],
    "source": [
     "# If multiple images are compared\n",
-    "viewer.compare_3d_imgs(imgs, axis=2, plot_size=0.8, view_vertical=True)"
+    "viewer.compare_3d_imgs([img_full, img_brain], axis=2, plot_size=0.8, view_vertical=False, img_res=(1, 1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Overlap two images for comparison\n",
+    "viewer.compare_aligned_3d(img_full, img_brain, axis=2, plot_size=0.8, img_res=(1, 1, 1))"
    ]
   },
   {
@@ -49,15 +59,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Overlap two images for comparison\n",
-    "viewer. compare_aligned_3d(imgs[0], imgs[1], axis=2, plot_size=0.8)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -71,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
