Remodulize into package

--- a/How to.ipynb
+++ b/How to.ipynb
@@ -24,8 +24,10 @@
    "outputs": [],
    "source": [
     "# Import the 3D viewer\n",
-    "from bokehView3D import bokehView3D\n",
+    "from bokehView3D.bokehView3D import bokehView3D\n",
+    "from bokeh.io import output_notebook\n",
     "viewer = bokehView3D()\n",
+    "output_notebook()\n",
     "\n",
     "# Display Single 3D image, axis controls the view (Axial, Coronal, Saggital),\n",
     "# plot_size controls the actually display size.\n",
